[package]
name = "async_test"
version = "0.1.0"
edition = "2021"

[lib]
name = "async_test"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.24"
features = ["abi3"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3-async-runtimes = { version = "0.24.0", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.40", features = ["fs"] }
futures = "0.3.31"
indicatif = "0.17.11"
uuid = { version = "1.16.0", features = ["v4"] }