[package]
name = "async_test"
version = "0.1.0"
edition = "2021"

[lib]
name = "async_test"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.25.1"
features = ["abi3"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3-async-runtimes = { version = "0.25.0", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.46.1", features = ["fs"] }
futures = "0.3.31"
indicatif = "0.18.0"
uuid = { version = "1.17.0", features = ["v4"] }
async-std = "1.13.1"